# FastAPI-tutorial

./: .gitignore  auth.py  blog.db  config.py  database.py  image_utils.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  snippets.txt
routers/: posts.py  users.py
static/css/: main.css
static/js/: utils.js
templates/: account.html  home.html  layout.html  post.html  user_posts.html
