[project]
name = "fastapi_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.129.0",
    "greenlet>=3.3.1",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "pillow>=12.1.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
